--- a/index.html
+++ b/index.html
@@ -17,41 +17,38 @@
             <a class="cabecalho__menu__link" href="contact.html">Contato</a>
         </nav>
     </header>
-    <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
-            class="titulo-destaque"> com um Front-end de QUALIDADE!
+    <main class="blocoEsquerda">
+        <section class="blocoEsquerda__conteudo">
+            <h1 class="blocoEsquerda__conteudo__titulo">Alavanque seu negócio hoje<strong 
+            class="titulo-destaque"> com um sites de QUALIDADE!
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Arthur, desenvolvedor
-            Front-end com especialidade em React, HTML e
-            CSS. Ajudo pequenos negócios e designers a
-            colocarem em prática boas ideias. Bora
+            <p class="blocoEsquerda__conteudo__texto">Olá! Sou Arthur, dev
+            Front-end com especialidade em HTML e
+            CSS. Ajudo pequenos  e grandes negócios a
+            colocarem seus projetos Online. Bora
             conversar?</p>
-            <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__navegacao" href="https://github.com/">
+            <div class="blocoEsquerda__links">
+                <h2 class="blocoEsquerda__links__subtitulo">Acesse minhas redes</h2>
+                <a class="blocoEsquerda__links__navegacao" href="https://github.com/">
                     <img src="./assets/github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://linkedin.com/">
+                <a class="blocoEsquerda__links__navegacao" href="https://linkedin.com/">
                     <img src="./assets/linkedin.png">
                     linkedin
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://twitch.tv/">
-                    <img src="./assets/twitch.png">
-                    Twitch
-                </a>
+              
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Minha foto">
+        <img class="blocoEsquerda__imagem" src="./assets/imagem.png" alt="Minha foto">
     </main>
     <footer class="rodape">
-        <audio autoplay >
+        <audio autoplay controls>
             <source src="./audio/audio.mp3" type="audio/mpeg">
         </audio>
         <script>
             var audio = document.querySelector('audio');
-            audio.volume = 0.2; 
+            audio.volume = 0.05; 
           </script>
         <p></p>
     </footer>
