--- a/about.html
+++ b/about.html
@@ -18,14 +18,14 @@
         </nav>
     </header>
 
-    <main class="apresentacao">
-        <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
+    <main class="blocoEsquerda">
+        <section class="blocoEsquerda__conteudo">
+            <h1 class="blocoEsquerda__conteudo__titulo">Sobre mim</h1>
+            <p class="blocoEsquerda__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
                 atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
                 similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
             </p>
-            <p class="apresentacao__conteudo__texto">
+            <p class="blocoEsquerda__conteudo__texto">
                 Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
                 eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
                 assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
@@ -34,7 +34,7 @@
                 perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
                 cupidatat non.</p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Minha foto">
+        <img class="blocoEsquerda__imagem" src="./assets/imagem.png" alt="Minha foto">
     </main>
 
     <footer class="rodape">
@@ -43,7 +43,7 @@
         </audio>
         <script>
             var audio = document.querySelector('audio');
-            audio.volume = 0.2; 
+            audio.volume = 0.05; 
           </script>
         <p></p>
     </footer>
