--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
             <a class="cabecalho__menu__link" href="contact.html">Contato</a>
+            <a class="cabecalho__menu__link" href="servicos.html">Serviços</a>
         </nav>
     </header>
     <main class="blocoEsquerda">
