--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
             <a class="cabecalho__menu__link" href="contact.html">Contato</a>
+            <a class="cabecalho__menu__link" href="servicos.html">Serviços</a>
+            
         </nav>
     </header>
     <h1 class="blocoEsquerda__conteudo__titulo">Entre em Contato</h1>
