tomanucu git de merda q n salva as coisas

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
               
             </div>
         </section>
-        <img class="blocoEsquerda__imagem" src="./assets/imagem.png" alt="Minha foto">
+        <img class="blocoEsquerda__imagem" src="./assets/foto.jpg" alt="Minha foto">
     </main>
     <footer class="rodape">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/V5sjGjotoUk?si=5CLGBsxSepW1Tx5B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <audio autoplay controls>
             <source src="./audio/audio.mp3" type="audio/mpeg">
         </audio>
