--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
                 cupidatat non.</p>
         </section>
-        <img class="blocoEsquerda__imagem" src="./assets/imagem.png" alt="Minha foto">
+        <img class="blocoEsquerda__imagem" src="./assets/foto.jpg" alt="Minha foto">
     </main>
 
     <footer class="rodape">
